# GraphPlayground

./: CMakeLists.txt  README.md  main.cpp
Data/: LoadTestResultsV40S3D40.csv  graph_output.dot  input.txt
Generators/: GraphGen.h
Graph/Algorithms/: Algorithms.h
Graph/Edge/: EdgeIO.h
Hash/: Functional.h  HashTable.h  HashTableIO.h
Interface/: DialogInterface.h  GraphFileInterface.h  GraphHandInterface.h  InterfaceStrings.cpp  InterfaceStrings.h  LoadTestsInterface.h
Interface/Dialog/: IDialog.h  MacOSDialog.h
ObjectClasses/: CTMMap.cpp  CTMMap.h  TransportIO.cpp
ObjectClasses/Attribute/: Attribute.h  AttributeGen.h  AttributeIO.h
ObjectClasses/Attribute/Currency/: Currency.h  CurrencyTypes.h
ObjectClasses/Attribute/Metrics/: Metrics.h  MetricsTypes.h
ObjectClasses/Attribute/Time/: TimeTypes.h
ObjectClasses/Mark/: MarkGen.h  MarkIO.h
ObjectClasses/Road/: Road.h  RoadAttributes.h  RoadGen.h
Sequences/: BinaryHeap.h  DynamicArray.h  LinkedList.h  PriorityQueue.h  Queue.h  Sequence.h
Tests/: FuncTests.h
Tests/temps/: test2.txt  test4.txt  test6.txt
include/Graph/Algorithms/: Algorithms.h
include/Graph/Edge/: Edge.h
include/Graph/Graph/: DirectedGraph.h  GraphVis.h  IGraph.h
include/Hash/: Functional.h  HashTable.h  HashTableIO.h
include/Interface/: DialogInterface.h  FuncTestsInterface.h  GraphFileInterface.h  GraphHandInterface.h  GraphHandWrite.h  Interface.h  LoadTestsInterface.h
include/Interface/Dialog/: TerminalDialog.h
include/ObjectClasses/: CTM.h  Transport.h  TransportIO.h
include/ObjectClasses/Attribute/: Attribute.h  AttributeGen.h  AttributeIO.h
include/ObjectClasses/Attribute/Currency/: CurrencyTypes.h
include/ObjectClasses/Attribute/Metrics/: MetricsTypes.h
include/ObjectClasses/Mark/: Mark.h
include/ObjectClasses/Road/: RoadAttributes.h  RoadIO.h
include/Sequences/: BinaryHeap.hpp  DynamicArray.hpp  LinkedList.hpp  LinkedListIO.hpp  PriorityQueue.hpp  Queue.hpp  Sequence.h
include/Tests/: FuncTests.h  LoadTests.h
include/Tests/temps/: test1.txt  test3.txt  test5.txt
sources/: CTMMap.cpp  InterfaceStrings.cpp  TransportIO.cpp  main.cpp
(+2 files in other folders)
